# catch2-cmake-example

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  arithmetics.cpp  arithmetics.hpp  string_utils.hpp
tests/: CMakeLists.txt  arithmetics.test.cpp  string_utils.test.cpp
